# fbref-chatbot

./: .gitignore  Procfile  chatbot.py  context.txt  db.py  ingest.py  init_schema.py  package-lock.json  pyproject.toml  render.yaml  requirements.txt  schema.sql
chatbot-ui/: package-lock.json  package.json
chatbot-ui/src/: App.css  App.tsx
data/: Prem player_passing_stats.csv  Prem player_possession_stats.csv  Prem player_shooting_stats.csv  db_col_types.py
scraping_functions/: standard_stats scrape.py  standardized_scraping_function.py
templates/: index.html
